Added inline image selection

--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
 
 <script src="js/simple_js_gallery.js"></script>
 <script>
-	simple_js_gallery("gallery");
+	var imageArray = ["img/1.jpg", "img/2.jpg", "img/3.jpg", "img/4.jpg"]; //Put images in an array
+	simple_js_gallery("gallery", imageArray);
 </script>
